Issue#SB-18775 UI - rtl alignment issues toc, profile, search list view more page (refer the attachments)

--- a/src/client/src/assets/styles/components/_video.scss
+++ b/src/client/src/assets/styles/components/_video.scss
@@ -14,7 +14,7 @@
       margin-left:calculateRem(8px);
       html[dir="rtl"] & {
         margin-left:inherit;
-        margin-right: calculateRem(8px)inherit;
+        margin-right: calculateRem(8px);
       }
     }
 
